@@ -16,6 +16,7 @@ version 1.4.2
 8053							: issue #290
 8056							: Russian TortoiseMerge doc translation completed
 8086							: "SVN Author" column
+8089							: unescape urls in merge dialog
 
 version 1.4.1
 7516							: bugtraq:message with only %BUGID% and bugtraq:number as true
